--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -100,6 +100,9 @@
   .baskets span{
     margin-left: 12px;
   }
+  .baskets i span{
+    font-family: Arial, Helvetica, sans-serif;
+  }
   
   @media (max-width: 600px) {
     .hamburger-menu {
